<resources>
    <string name="app_name">Rabbeinu Tam</string>
    <string name="Today">Today</string>
    <string name="specify">Specify Date</string>
    <string name="shabbat">Shabbat</string>
    <string name="shabbat_he">שבת</string>
    <string name="title_location_permission">No location permission</string>
    <string name="text_location_permission">
        Ideally, this app needs location permissions in order to accurately calculate the zmanim.
        Therefore, it is better to allow the app to see your location. We do not use your location
        for any other purpose than to calculate the zmanim. (Note: As of Android 11, the app can not
        ask you for location permissions more than once per install. You might need to re-install
        the app to use your location.) \n\n However, if you still do not want to give location
        permissions, you can choose to enter a zipcode and the app will try to find your location.
    </string>
    <string name="ok">OK</string>
    <string name="setup_elevation">Setup Elevation</string>
    <string name="mishor_request">If you want to use Mishor (Sea Level) Sunset for your calculations
        of Rabbeinu Tam, just press the button below:</string>
    <string name="mishor_sea_level">Mishor (Sea Level)</string>
    <string name="manual_button">If you want to specify the elevation level (in meters) yourself,
        press this button:</string>
    <string name="manual">Manual</string>
    <string name="chaitables_request">If you want to get this information from chaitables.com,
        press this button:</string>
    <string name="chaitables">ChaiTables</string>
    <string name="long_explanation">Some opinions hold that the actual sunset that should be used
        for calculating zmanim is when sunset is seen at the highest point in the city.
        However, some do not hold of this opinion. Therefore, I left this part up to the user.
        Note that elevation does NOT affect degree based zmanim.</string>
    <string name="choose_date">Choose Date</string>
    <string name="specific_explanation">Press the button below to find out when Rabbeinu Tam is for
        a certain date:</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="how_the_calculations_work">How the calculations work</string>
    <string name="re_run_setup">Re-run Setup</string>
    <string name="title_activity_about">About Activity</string>
    <string name="about_text">
        "Why I created this app.\n\n"

        "I created this app because I did not want to calculate manually when Rabbeinu Tam is"
        "every week. Since I learnt how to calculate Rabbeinu tam, I have been doing it in my head"
        "every week, however, I realized that I could just create an application to do the"
        "calculations for me, therefore, I set out to create this app.\n"
        "However, once I saw that I was doing all the work anyway, I decided to expand my app to"
        "include more opinions (shitot).\n\n"

        "What's the deal with elevation?.\n\n"

        "I added elevation input into this application because there are many opinions that hold"
        "that elevation should be included into the calculations. As obviously, the length of the"
        "day will be longer the higher the person is, since he is able to see the sun for a longer"
        "period of time. In Yerushalayim (Jerusalem), elevation makes sunrise and sunset around 7"
        "minutes earlier/later. However, not everyone takes this into account. Many opinions just"
        "calculate sunrise and sunset from sea level (Mishor).\n"
        "There are also opinions that use the degrees of the sun under or over the horizon. These"
        "opinions do not care about elevation of the person, rather where the sun is in the sky."
        "If you are using these opinions for your calculations, you can just choose the mishor"
        "(sea level) option and it will ignore elevation.\n"
        "Because of these many opinions, I just left the option to add elevation up to the user."
        "\n\n"

        "There is already a zmanim android app, why did you create another app?\n\n"

        "Two reasons: First of all, I wanted the practice of creating an android application."
        "Second of all, my app includes elevation in the calculations of Rabbeinu tam."
        "Whereas, other zmanim apps only include elevation for sunrise and sunset but NOT for the"
        "calculations of Rabbeinu tam and other opinions.\n\n"

        "Why did I get a pop up when I traveled to another place?\n\n"

        "Since elevation changes from city to city, and we need to find the highest visible place"
        "in the city for our calculations. I added a feature that checks the current name of the"
        "place you are located at, and the app checks every time you start the app whether you are"
        "in the same city. This feature is not perfect and it might be more annoying than helpful."
        "\nTherefore, you can choose to never get asked again about this issue."

    </string>
    <string name="help">Help</string>
    <string name="enter_a_zipcode">Enter A Zipcode</string>
</resources>