<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/enterZipcode"
        android:title="@string/enter_a_zipcode" />
    <item
        android:id="@+id/RerunSetup"
        android:title="@string/setup_elevation" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/calc_explanations"
        android:title="@string/how_the_calculations_work" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />

</menu>