<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SetupActivity"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/setup_elevation"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/elevation_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/long_explanation"
        />

    <TextView
        android:id="@+id/mishor_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        android:text="@string/mishor_request"
        />

    <Button
        android:id="@+id/mishor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mishor_sea_level"
        />

    <TextView
        android:id="@+id/manual_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginTop="40dp"
        android:text="@string/manual_button"
        />

    <Button
        android:id="@+id/manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/manual"
        />

    <TextView
        android:id="@+id/chaiTables_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/geonames_request"
        />

    <Button
        android:id="@+id/geonames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/get_from_geonames"
        />

</LinearLayout>